# esp32-embedded-peripheral-demos

./: .gitignore  LICENSE  README.md
ESP32P4_Camera_JPEG_Stream/: CMakeLists.txt  README.md  sdkconfig.defaults
ESP32P4_Camera_JPEG_Stream/components/Camera/: CMakeLists.txt  camera_ov2640.cpp  idf_component.yml
ESP32P4_Camera_JPEG_Stream/components/Camera/cam_driver/sensor_init/: example_sensor_init.c
ESP32P4_Camera_JPEG_Stream/components/Camera/cam_driver/sensor_init/include/: example_sensor_init.h
ESP32P4_Camera_JPEG_Stream/components/Camera/include/: camera_ov2640.h  ov2640_config.h
ESP32P4_Camera_JPEG_Stream/main/: CMakeLists.txt  grab_jpeg.py  main.cpp
ESP32S3_Peripheral_Demos/: CMakeLists.txt  README.md
ESP32S3_Peripheral_Demos/components/GPIO_Expander/: CMakeLists.txt
ESP32S3_Peripheral_Demos/components/GPIO_Expander/include/: TCA9555.h
ESP32S3_Peripheral_Demos/components/GPIO_Expander/src/: TCA9555.cpp
ESP32S3_Peripheral_Demos/components/Stepper/: CMakeLists.txt
ESP32S3_Peripheral_Demos/components/Stepper/include/: Stepper_monitor.h
ESP32S3_Peripheral_Demos/components/Stepper/src/: Stepper_monitor.cpp
ESP32S3_Peripheral_Demos/main/: CMakeLists.txt  main.cpp
